fix: trade-history 아이콘, gap 수정

--- a/week2/KimJiHyun/index.css
+++ b/week2/KimJiHyun/index.css
@@ -6,6 +6,25 @@ button {
     cursor: pointer;
 }
 
+body,
+h1,
+h2,
+ul,
+li,
+p {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -114,6 +133,20 @@ header {
     text-align: center;
 }
 
+.trade-history__icon {
+    border-radius: 100px;
+    background: #ffebe0;
+    display: flex;
+    padding: 12px;
+    align-items: flex-start;
+    gap: 10px;
+}
+.trade-history__list li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
 .trade-history__list span {
     color: #000;
 
@@ -146,4 +179,21 @@ header {
     align-items: center;
     gap: 16px;
     padding: 10px;
+}
+
+.bottom-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 8px 0px 8px 0px;
+    background-color: white;
+    border-top: 1px solid #e9ecef;
+}
+.bottom-bar__list {
+    display: flex;
+}
+
+.bottom-bar__list li {
+    flex-direction: column;
 }
